rust/macros/tests/invalid/target/debug/deps/comma_sep-53aa79ec15434af3.d
/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/comma_sep-53aa79ec15434af3.d: comma_sep.rs Cargo.toml

/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/libcomma_sep-53aa79ec15434af3.rmeta: comma_sep.rs Cargo.toml

comma_sep.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
